--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -3,11 +3,21 @@
 server.servlet.context-path=/api
 server.port=80
 
-# DataBase Settings : hikariCP
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/vue-shop?serverTimezone=UTC&useUniCode=yes&characterEncoding=UTF-8
-spring.datasource.username=root
-spring.datasource.password=root
+# DataBase Settings : hikariCP : https://github.com/brettwooldridge/HikariCP
+spring.datasource.hikari.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.hikari.jdbc-url=jdbc:mysql://localhost:3306/vue-shop?serverTimezone=UTC&useUniCode=yes&characterEncoding=UTF-8
+spring.datasource.hikari.username=root
+spring.datasource.hikari.password=1234
+spring.datasource.hikari.pool-name=Hikari Connection Pool
+
+# hikariCP property setting
+spring.datasource.hikari.maximum-pool-size=50
+spring.datasource.hikari.minimum-idle=50
+spring.datasource.hikari.connection-timeout=5000
+spring.datasource.hikari.connection-init-sql=SELECT 1
+spring.datasource.hikari.idle-timeout=600000
+spring.datasource.hikari.max-lifetime=1800000
+spring.datasource.hikari.auto-commit=true
 
 # JWT setting
 jwt.salt=kimhaechang
@@ -16,8 +26,8 @@ jwt.access-token.expiretime=3600000
 
 #mybatis setting
 mybatis.mapper-locations="classpath:mapper/**/*.xml"
-mybatis.type-aliases-package="com.khc.*.model"
+mybatis.type-aliases-package="com.khc.shop.*.model"
 
 #log level Setting
 logging.level.root=info
-logging.level.com.ssafy.vue=debug
+logging.level.com.khc.shop=debug
